--- a/src/css/LogoSlider.css
+++ b/src/css/LogoSlider.css
@@ -2,19 +2,18 @@
   overflow: hidden;
   width: 100%;
   padding: 1rem 0;
-  background-color: #000000;
+  background-color: transparent; /* Fond transparent */
 }
 
 .logo-track {
   display: flex;
-  width: calc(250px * 18); /* 6 logos x2 */
+  width: calc(250px * 18); /* Ajusté pour le bon fonctionnement */
   animation: scroll 20s linear infinite;
 }
 
 .logo-item {
   flex: 0 0 auto;
   width: 250px;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,12 +21,12 @@
 }
 
 .logo-item img {
-  max-width: 250px;         /* avant : 120px */
-  max-height: 190px;        /* avant : 60px */
+  max-width: 250px;
+  max-height: 190px;
   object-fit: contain;
   opacity: 0.85;
   transition: transform 0.3s;
-}
+  filter: brightness(0) saturate(100%) invert(25%) sepia(97%) saturate(607%) hue-rotate(90deg) contrast(85%); /* Filtre pour teinte verte */}
 
 .logo-item img:hover {
   transform: scale(1.1);
@@ -39,6 +38,6 @@
     transform: translateX(0);
   }
   100% {
-    transform: translateX(-50%);
+    transform: translateX(-30%);
   }
 }
